<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/view_header"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:background="#855E53"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cappuccino"
        android:textColor="#fff"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="@id/view_header"
        app:layout_constraintLeft_toLeftOf="@id/view_header"
        app:layout_constraintRight_toRightOf="@id/view_header"
        app:layout_constraintTop_toTopOf="@id/view_header" />

    <ImageView
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_margin="16dp"
        android:src="@drawable/ic_baseline_arrow"
        android:tint="#fff"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_clock"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:src="@drawable/ic_time"
        android:tint="#855E53"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/image_favorite"
        app:layout_constraintTop_toBottomOf="@id/view_header" />

    <ImageView
        android:id="@+id/image_favorite"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:src="@drawable/ic_love"
        android:tint="#855E53"
        app:layout_constraintLeft_toRightOf="@id/image_clock"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_header" />

    <TextView
        android:id="@+id/text_minutos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_15_minutos"
        app:layout_constraintLeft_toLeftOf="@id/image_clock"
        app:layout_constraintRight_toRightOf="@id/image_clock"
        app:layout_constraintTop_toBottomOf="@id/image_clock" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_300_vezes"
        app:layout_constraintLeft_toLeftOf="@id/image_favorite"
        app:layout_constraintRight_toRightOf="@id/image_favorite"
        app:layout_constraintTop_toBottomOf="@id/image_favorite" />

    <View
        android:id="@+id/view_separator"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_margin="16dp"
        android:background="#855E53"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_minutos" />

    <TextView
        android:id="@+id/text_descricao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/receita"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_separator" />

    <TextView
        android:id="@+id/text_ingredientes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/ingredientes"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_descricao" />

    <ImageView
        android:id="@+id/image_ingrediente1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_chevron_right"
        android:tint="#855E53"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_ingredientes" />

    <TextView
        android:id="@+id/text_ingrediente1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dose_espresso"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/image_ingrediente1"
        app:layout_constraintLeft_toRightOf="@id/image_ingrediente1"
        app:layout_constraintTop_toTopOf="@id/image_ingrediente1" />

    <ImageView
        android:id="@+id/image_ingrediente2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_chevron_right"
        android:tint="#855E53"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_ingrediente1" />

    <TextView
        android:id="@+id/text_ingrediente2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ml_leite"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/image_ingrediente2"
        app:layout_constraintLeft_toRightOf="@id/image_ingrediente2"
        app:layout_constraintTop_toTopOf="@id/image_ingrediente2" />

    <ImageView
        android:id="@+id/image_ingrediente3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_chevron_right"
        android:tint="#855E53"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_ingrediente2" />

    <TextView
        android:id="@+id/text_ingrediente3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/colher_de_chocolate"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/image_ingrediente3"
        app:layout_constraintLeft_toRightOf="@id/image_ingrediente3"
        app:layout_constraintTop_toTopOf="@id/image_ingrediente3" />

</androidx.constraintlayout.widget.ConstraintLayout>